# raylib-template-linux

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  copy-assets.cmake
assets/: README.MD
src/: main.cpp
